Segundo Commit - Apagando imagens desnecessarias

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Marcos Ramos</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1_min.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,23 +66,30 @@
         <h1 class="mb-0">Marcos
           <span class="text-primary">Ramos</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (21) 585-8468 ·
-          <a href="mailto:name@email.com">rodrigues.ramos@gmail.com</a>
+        <div class="subheading mb-5">Saúde · Rio de Janeiro · RJ · (21) 98441-9879 ·
+          <a href="mailto:rodrigues.ramos@outlook.com">rodrigues.ramos@outlook.com</a>
         </div>
-        <p class="lead mb-5">Desenvolvedor front-end, apaixonado por tecnologia e pelos filhos. Louco por música também.</p>
+        <p class="lead mb-5">Front-end developer, passionate about technology and my 3 children. Crazy about music too.
+          Start my first steps in programming at the age of 15 studying Delphi in technical high school. Then with the need
+          to work and support children, at 19, came my first job in the area of ​​assembling and maintaining computers. It kept me for 8 years.
+          Even though I didn't work directly with programming, I always developed sollutions using programming concepts and also tried to keep up to date with technology. With no money to pay for college, I decided
+          use the time left to study and pass the entrance exam of a federal university. And so I went to UFF, where I applyed for
+          Technology in Computer Systems course. I worked in several companies over these years, acquired knowledge in hard skills and soft skills, but the 
+          desire to become a developer doesn't go away. That's my goal.
+        </p>
         <div class="social-icons">
-          <a href="#">
+          <a href="http://www.linkedin.com/in/marcos-ramos-8350074b" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/gitrodrigues1" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          </a> -->
+          <!-- <a href="#">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
@@ -96,11 +103,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">System Analyst</h3>
-            <div class="subheading mb-3">Oi S/A</div>
-            <p>Support TOTVS ERP Protheus system. Focused on sales market. Users support.</p>
+            <div class="subheading mb-3">Oi S/A (Prestador de Serviços)</div>
+            <p>Documentation, unit/integrated testing, configuration and implementation of stores throughout Brazil. Training Coordinator</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">September 2017 - November 2019</span>
           </div>
         </div>
 
@@ -108,10 +115,11 @@
           <div class="resume-content">
             <h3 class="mb-0">System Analyst</h3>
             <div class="subheading mb-3">Rede DOR S/A</div>
-            <p>Support TOTVS ERP Protheus system. Focused on Human Resources and Financial system operations. Users support. Worked on new hospitals projects</p>
+            <p>Totvs Protheus Analyst. Focus on Personnel and Financial Management modules. Support for system users.
+                Participation in projects for the incorporation of new hospital units</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2016- February 2017</span>
           </div>
         </div>
 
@@ -122,7 +130,7 @@
             <p>Support TOTVS ERP Protheus system. Focused on sales market. Users support. Worked on new stores projects</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">March 2015 - May 2016</span>
           </div>
         </div>
 
@@ -135,7 +143,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">December 2014 - March 2015</span>
           </div>
         </div>
 
@@ -175,10 +183,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Universidade Federal Fluminense</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Tecnologia em Sistemas de Computação</div>
-            <p>GPA: X.XX</p>
+            <h3 class="mb-0">Universidade Federal Fluminense </h3>
+            <div class="subheading mb-3">Technology in Computer Systems</div>
+            <div></div>
+            <p>In progress</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - May 2021</span>
@@ -187,9 +195,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Escola TEcnica Electra</h3>
+            <h3 class="mb-0">Escola TEcnica Electra (High School)</h3>
             <div class="subheading mb-3">Information Technology</div>
-            <p>GPA: X.XX</p>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2004 - May 2006</span>
@@ -268,7 +276,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>A business analyst changing the carrer to become a devoloper, finishing graduation.</p>
+        <p>A business analyst changing carrer to become a devoloper, finishing graduation.</p>
         <p class="mb-0">When forced indoors, I split a large amount of my free time educating and entertaining my 3 children and exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
@@ -281,30 +289,25 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Java – Collection e Streams – Digital Innovation One</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Introdução ao Github e comandos essenciais para trabalhar em equipe – Digital Innovation One</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Modelagem de Processos com Bizagi (BPMN)</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            Totvs Formação – Programação Advpl</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            Capacitação no ERP Totvs Microsiga Protheus: Configurador</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+            Capacitação no ERP Totvs Microsiga Protheus: Arquitetura e Instalação</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Certificação Microsoft 70-290  MCP Windows Server 2003</li>
         </ul>
       </div>
     </section>
